--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path("home_userQuiz") }}">Quiz</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">testquiz</a>
+                        </li>
                         {% endif %}
                     </ul>
                     <ul class="navbar-nav ml-auto">
