--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path("testquiz_load") }}">Chargement Excel</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("home_test") }}">Test</a>
+                        </li>
                         {% endif %}
                     </ul>
                     <ul class="navbar-nav ml-auto">
