--- a/base.html.twig
+++ b/base.html.twig
@@ -21,7 +21,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ path("homepage") }}">Accueil<span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="{{ path("homepage") }}">Acueil<span class="sr-only">(current)</span></a>
                         </li>
                         {% if app.user %}
                         <li class="nav-item">
