--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Bienvenue sur LMS WF3 !{% endblock %}</title>
-        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
-        <link rel="stylesheet"  href="{{ asset('css/app.css') }}"> 
+        <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">   
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.0/cjs/popper.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet"  href="{{ asset('css/app.css') }}">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-   
-        
+    
+        <main>    
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 <a class="navbar-brand" href="{{ path("homepage") }}">LMS-WF3</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,9 +33,6 @@
                             <a class="nav-link" href="{{ path("answer_index") }}">Réponses</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path("home_quiz") }}">Liste des bonnes réponses</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="{{ path("home_userQuiz") }}">Quiz</a>
                         </li>
                         <li class="nav-item">
@@ -45,7 +44,7 @@
                         {% if app.user %}
                         <li class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDopdownLink">
-                                <img src="{{ app.user.picture }}" alt="Avatar de {{app.user.firstname}}" width="24px" height="auto">
+                                <img src="{{ app.user.picture }}" alt="Avatar de {{app.user.firstname}}" width="24px" height="auto">Profil
                             </a>
                             <div class="dropdown-menu dropdown-menu-rigth" aria-labelledby="accountDopdownLink">
                                 <a href="{{ path('account_index') }}" class="dropdown-item">Mon profil</a>
@@ -71,6 +70,7 @@
                     
                 </div>
             </nav>
+        
         
     {#
     < class="container">
@@ -165,9 +165,12 @@
                     </div>
                 {% endfor %}
                 {% block body %}{% endblock %}
+    </main>
 
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/popper.min.js"></script>
+        {#<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>#}
+        {#<script src="/js/jquery.min.js"></script>#}
+        {#<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.0/cjs/popper.min.js"></script>#}
+        {#<script src="/js/popper.min.js"></script>#}
         <script src="/js/bootstrap.min.js"></script>
 
         {% block javascripts %}{% endblock %}
